# 42

./: .gitignore  AGENTS.md  README.md
projects/a_maze_ing/: .gitignore  Makefile  NOTES.md  README.md  a_maze_ing.py  config.txt  maze_config.py  maze_interactive.py  maze_output.py  maze_render.py  mazegen-0.1.0-py3-none-any.whl  mazegen.py  pyproject.toml  visualizer.html
projects/a_maze_ing/tests/: __init__.py  test_cli_modules.py  test_mazegen.py
projects/a_maze_ing/tmp/test_maze_project/: test.py
projects/push_swap/: Makefile  NOTES.md  README.md  index.c  main.c  operations.c  operations_push.c  operations_reverse.c  operations_rotate.c  parse.c  push_swap.h  sort.c  sort_big.c  sort_small.c  stack.c  utils.c
projects/python00/: NOTES.md  README.md  en.subject.txt
projects/python01/: NOTES.md  README.md  en.subject.txt
projects/python02/: NOTES.md  README.md  en.subject.txt
projects/python03/: NOTES.md  README.md  en.subject.txt
projects/python04/: NOTES.md  README.md  en.subject.txt
projects/python05/: NOTES.md  README.md  en.subject.txt
projects/python06/: NOTES.md  README.md  en.subject.txt  ft_alembic_3.py  ft_alembic_4.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
projects/python07/: NOTES.md  README.md  battle.py  capacitor.py  en.subject.txt  tournament.py
projects/python07/ex0/: __init__.py  (+3 more)
projects/python08/: NOTES.md  README.md  en.subject.txt
projects/python08/ex1/: loading.py  pyproject.toml  requirements.txt
projects/python09/: NOTES.md
projects/python10/: NOTES.md
(+53 files in other folders)
