[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "Reusable maze generator for the A-Maze-ing project"
readme = "NOTES.md"
requires-python = ">=3.10"
authors = [
    { name = "mal-hall" }
]

[tool.setuptools]
py-modules = [
    "a_maze_ing",
    "maze_config",
    "maze_interactive",
    "maze_output",
    "maze_render",
    "mazegen",
]
