[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Python Module 08 loading exercise"
authors = ["42 Student <student@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
matplotlib = ">=3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
